load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "js",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "language.go",
        "resolve.go",
        "target.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/js",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/cache",
        "//common/logger",
        "//common/rule",
        "//language/js/node",
        "//language/js/parser",
        "//language/js/pnpm",
        "//language/js/proto",
        "//language/js/typescript",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_emirpasic_gods//maps/linkedhashmap",
        "@com_github_emirpasic_gods//maps/treemap",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "js_test",
    srcs = ["generate_test.go"],
    embed = [":js"],
)
