load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common(/.*)? @aspect_gazelle//common$1

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = "@aspect_gazelle//:gazelle_bin",
)

gazelle(
    name = "gazelle.check",
    gazelle = "@aspect_gazelle//:gazelle_bin",
    mode = "diff",
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_js",
    actual = ":js",
    visibility = ["//visibility:public"],
)

go_library(
    name = "js",
    srcs = [
        "config.go",
        "configure.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "language.go",
        "resolve.go",
        "target.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/js",
    visibility = ["//visibility:public"],
    deps = [
        "//node",
        "//parser",
        "//pnpm",
        "//proto",
        "//typescript",
        "@aspect_gazelle//common",
        "@aspect_gazelle//common/cache",
        "@aspect_gazelle//common/logger",
        "@aspect_gazelle//common/rule",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_emirpasic_gods//maps/treemap",
        "@com_github_emirpasic_gods//sets/treeset",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "js_test",
    srcs = ["generate_test.go"],
    embed = [":js"],
)
