load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kotlin",
    srcs = [
        "configure.go",
        "generate.go",
        "imports.go",
        "kotlin.go",
        "language.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/logger",
        "//common/rule",
        "//language/kotlin/kotlinconfig",
        "//language/kotlin/parser",
        "@com_github_bazel_contrib_rules_jvm//java/gazelle/javaconfig",
        "@com_github_bazel_contrib_rules_jvm//java/gazelle/private/java",
        "@com_github_bazel_contrib_rules_jvm//java/gazelle/private/maven",
        "@com_github_bazel_contrib_rules_jvm//java/gazelle/private/types",
        "@com_github_emirpasic_gods//maps/treemap",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_emirpasic_gods//utils",
        "@com_github_rs_zerolog//:zerolog",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = ["kotlin_test.go"],
    embed = [":kotlin"],
)
