module(
    name = "aspect_gazelle_kotlin",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_gazelle", version = "0.0.0")
bazel_dep(name = "rules_go", version = "0.56.1")
bazel_dep(name = "gazelle", version = "0.45.0")  # must match go.mod
bazel_dep(name = "contrib_rules_jvm", version = "0.30.0")

# Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_emirpasic_gods", "com_github_rs_zerolog")

####### Dev dependencies ########

# Always use the local @aspect_gazelle
local_path_override(
    module_name = "aspect_gazelle",
    path = "../../",
)

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
