load("@gazelle//:def.bzl", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:exclude tests/

go_library(
    name = "orion",
    srcs = [
        "builtin.go",
        "config.go",
        "configure.go",
        "generate.go",
        "host.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/orion",
    visibility = ["//visibility:public"],
    deps = [
        "//common",
        "//common/bazel/workspace",
        "//common/cache",
        "//common/logger",
        "//common/rule",
        "//language/orion/plugin",
        "//language/orion/queries",
        "//language/orion/starzelle",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_emirpasic_gods//maps/linkedhashmap",
        "@com_github_emirpasic_gods//sets/treeset",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_x_sync//errgroup",
    ],
)

# Internal only for tests
gazelle_binary(
    name = "gazelle_orion_binary",
    testonly = True,
    languages = [
        ":orion",
    ],
    visibility = ["//:__subpackages__"],
)
