load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:resolve_regexp go github.com/aspect-build/aspect-gazelle/common(/.*)? @aspect_gazelle//common$1

gazelle(
    name = "gazelle",
    extra_args = ["-index=lazy"],
    gazelle = "@aspect_gazelle//:gazelle_bin",
)

gazelle(
    name = "gazelle.check",
    gazelle = "@aspect_gazelle//:gazelle_bin",
    mode = "diff",
)

# Target name matching MODULE name
alias(
    name = "aspect_gazelle_orion",
    actual = ":orion",
    visibility = ["//visibility:public"],
)

go_library(
    name = "orion",
    srcs = [
        "builtin.go",
        "config.go",
        "configure.go",
        "generate.go",
        "host.go",
        "resolver.go",
    ],
    importpath = "github.com/aspect-build/aspect-gazelle/language/orion",
    visibility = ["//visibility:public"],
    deps = [
        "//plugin",
        "//queries",
        "//starzelle",
        "@aspect_gazelle//common",
        "@aspect_gazelle//common/bazel/workspace",
        "@aspect_gazelle//common/cache",
        "@aspect_gazelle//common/logger",
        "@aspect_gazelle//common/rule",
        "@com_github_emirpasic_gods//sets/treeset",
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@org_golang_x_sync//errgroup",
    ],
)
