module(
    name = "aspect_gazelle_orion",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_gazelle", version = "0.0.0")
bazel_dep(name = "rules_go", version = "0.56.1")
bazel_dep(name = "gazelle", version = "0.45.0")

# Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_aspect_build_aspect_gazelle", "com_github_bmatcuk_doublestar_v4", "com_github_emirpasic_gods", "com_github_itchyny_gojq", "com_github_mikefarah_yq_v4", "net_starlark_go", "org_golang_x_sync")

####### Dev dependencies ########

# Always use the local @aspect_gazelle
local_path_override(
    module_name = "aspect_gazelle",
    path = "../../",
)

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
