load("@rules_go//go:def.bzl", "go_library", "go_test")

# Export patch so other repositories can depend on it.
exports_files(["gazelle-gitignore.patch"])

go_library(
    name = "git",
    srcs = ["gitignore.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/runner/git",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@com_github_go_git_go_git_v5//plumbing/format/gitignore",
        "@gazelle//walk",
    ],
)

go_test(
    name = "git_test",
    srcs = ["gitignore_test.go"],
    embed = [":git"],
    deps = ["@com_github_go_git_go_git_v5//plumbing/format/gitignore"],
)
