load("@aspect_gazelle//:gazelle.bzl", "gazelle_generation_test")

# Disable the gazelle extensions
# gazelle:ignore

[
    gazelle_generation_test(
        name = "%s_test" % t,
        dir = t,
        env = {
            "TEST_ORION_EXTENSIONS": "%s/%s" % (
                package_name(),
                t,
            ),
        },
        gazelle_binary = "//:gazelle_prebuilt_bin",
    )
    for t in [t.replace("/WORKSPACE", "") for t in glob(["*/WORKSPACE"])]
]
