load("@aspect_gazelle//:gazelle.bzl", "gazelle_generation_test")

# gazelle:ignore
# gazelle:generation_mode update_only

[
    gazelle_generation_test(
        name = "%s_test" % t,
        dir = t,
        env = {
            "ENABLE_LANGUAGES": "js,starlark,go,proto,python,cc",
            "ORION_EXTENSIONS_DIR": "%s/%s" % (
                package_name(),
                t,
            ),
        },
        gazelle_binary = "//:gazelle_prebuilt_bin",
    )
    for t in [t.replace("/WORKSPACE", "") for t in glob(["*/WORKSPACE"])]
]
