load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

write_source_files(
    name = "write_pb_go",
    additional_update_targets = [
        "//cli/core/bazel/action_cache:write_pb_go",
        "//cli/core/bazel/analysis:write_pb_go",
        "//cli/core/bazel/buildeventstream:write_pb_go",
        "//cli/core/bazel/command_line:write_pb_go",
        "//cli/core/bazel/failure_details:write_pb_go",
        "//cli/core/bazel/flags:write_pb_go",
        "//cli/core/bazel/invocation_policy:write_pb_go",
        "//cli/core/bazel/options:write_pb_go",
        "//cli/core/bazel/packages_metrics:write_pb_go",
        "//cli/core/bazel/query:write_pb_go",
    ],
)
