load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stdlib",
    srcs = ["path.go"],
    importpath = "github.com/aspect-build/orion/common/starlark/stdlib",
    visibility = ["//visibility:public"],
    deps = [
        "//common/starlark/utils",
        "@net_starlark_go//starlark",
    ],
)
