load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "package.go",
        "paths.go",
        "std_modules.go",
    ],
    embedsrcs = ["std_modules.list"],
    importpath = "github.com/aspect-build/aspect-gazelle/language/js/node",
    visibility = ["//visibility:public"],
    deps = [
        "//common/logger",
        "@com_github_emirpasic_gods//sets/treeset",
        "@com_github_msolo_jsonr//:jsonr",
    ],
)

js_binary(
    name = "std_modules_launcher",
    entry_point = "std_modules.js",
    visibility = ["//visibility:private"],
)

genrule(
    name = "gen_std_modules_go",
    outs = ["std_modules.list"],
    cmd = "BAZEL_BINDIR=$(BINDIR) $(location :std_modules_launcher) > $@",
    tools = [":std_modules_launcher"],
    visibility = ["//visibility:private"],
)

go_test(
    name = "node_test",
    srcs = [
        "package_test.go",
        "paths_test.go",
    ],
    embed = [":node"],
)
