load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["parser.go"],
    importpath = "github.com/aspect-build/aspect-gazelle/language/js/parser",
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_gazelle//common/logger",
        "@aspect_gazelle//common/treesitter",
        "@aspect_gazelle//common/treesitter/grammars/tsx",
        "@aspect_gazelle//common/treesitter/grammars/typescript",
    ],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
)
